hphp/hack/test/typecheck/stricter_consts/interface_class_interface_1.bad.php.exp
File "interface_class_interface_1.bad.php", line 14, characters 7-7:
Class `D` does not correctly implement all required members  (Typing[4374])
  File "interface_class_interface_1.bad.php", line 14, characters 17-17:
  Some members are incompatible with those declared in type `C`
  File "interface_class_interface_1.bad.php", line 11, characters 13-13:
  Non-abstract constants defined in an interface or trait cannot conflict with other inherited constants.
  File "interface_class_interface_1.bad.php", line 5, characters 13-13:
  `X` inherited from `IC`
  File "interface_class_interface_1.bad.php", line 11, characters 13-13:
  conflicts with constant `X` inherited from `ID`.
