hphp/hack/test/typecheck/stricter_consts/interface_class_interface_1.bad.php
<?hh
// Copyright (c) Facebook, Inc. and its affiliates. All Rights Reserved.

interface IC {
  const int X = 1;
}

class C implements IC {}

interface ID {
  const int X = 2;
}

class D extends C implements ID {}
